<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ERApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_add">Add Expense</string>
    <string name="title_activity_display_message">Add Expense</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_view_expenses">Expenses</string>
    <string name="button_submit">Submit</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="text_item">Product/Service</string>
    <string name="text_price">Price</string>
    <string name="text_category">Category</string>
    <string name="spinner_category">Category</string>
    <string name="text_comment">Comment</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_addEmployee">Approve Employee</string>
    <string name="title_activity_correctExpenses">Correct Expenses</string>
    <string name="title_activity_expense">Expense</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="button_login">Log In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_correction">Correct Expenses</string>
    <string name="button_addEmployee">Approve Employee</string>
    <string name="button_view">View Expenses</string>
    <string name="text_verifyPass">Verify password</string>
    <string name="text_Merchant">Merchant</string>
    <string name="text_Description">Description</string>
    <string name="text_Payment">Payment Type</string>
    <string name="text_date">Date</string>
    <string name="check_company">Corporate user</string>
    <string name="button_adds">Add</string>
    <string name="hint_date">M/D/YYYY</string>
    <string name="button_addfromfile">Add from file</string>
    <string name="hint_name">Name</string>
    <string name="action_sortDate">Sort by date</string>
    <string name="action_sortPrice">Sort by price</string>
    <string name="action_export">Export to CSV</string>
    <string name="title_export">Select range:</string>
    <string name="title_month">Select month:</string>
    <string name="title_year">Select year:</string>
    <string name="no_expenses">No expenses</string>
    <string name="company_signup">Company</string>
    <string name="no_additions">No pending additions</string>
    <string name="welcome">Welcome to ERApp. Please log in or sign up.</string>
    <string name="remove">Remove</string>
    <string name="logging">Logging in</string>
    <string name="action_filter">Filter</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete filtered</string>
    <string name="title_filter">Filter by:</string>

    <string-array name="entries_category">
        <item>Category</item>
        <item>Bill</item>
        <item>Dining</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Fuel</item>
        <item>Lodging</item>
        <item>Medical</item>
        <item>Office</item>
        <item>Shopping</item>
        <item>Transportation</item>
    </string-array>
    <string-array name="entries_currency">
        <item>AUD</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>MXN</item>
        <item>USD</item>
    </string-array>
    <string-array name="entries_payment">
        <item>Card</item>
        <item>Cash</item>
        <item>Check</item>
        <item>Transfer</item>
    </string-array>

</resources>