<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:id="@+id/LinearLayout1"
	android:layout_width="wrap_content" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" tools:context=".AddExpenseActivity">

	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_weight="45"
	    android:contentDescription="TODO"
	    android:scaleType="center"
	    android:src="@drawable/camera_background" />

	<ScrollView android:id="@+id/ScrollView1"
		android:layout_width="match_parent" android:layout_height="0dp"
		android:layout_marginTop="5dp" android:layout_weight="55">

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp" android:layout_marginTop="5dp"
			android:orientation="vertical">

			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_marginBottom="5dp"
				android:gravity="center">

				<Button android:id="@+id/button_camera" style="?android:attr/buttonStyleSmall"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginRight="15dp" android:text="@string/button_camera" />

				<Button android:id="@+id/button_gallery" style="?android:attr/buttonStyleSmall"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/button_gallery" />

			</LinearLayout>
			<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/text_price"
				android:textSize="18sp" />

			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
				    android:id="@+id/addExpensePrice"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="76"
				    android:ems="10"
				    android:inputType="number|text" />

				<Spinner
				    android:id="@+id/addExpenseCurrency"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="24"
				    android:entries="@array/entries_currency" />

			</LinearLayout>

			<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="15dp"
				android:text="@string/text_Merchant" android:textSize="18sp" />

			<EditText android:id="@+id/addExpenseMerchant" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:ems="10"
				android:inputType="text" />

			<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="15dp"
				android:text="@string/text_category" android:textSize="18sp" />

			<Spinner android:id="@+id/addExpenseCategory" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:entries="@array/entries_category"
				android:prompt="@string/spinner_category" />

			<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="15dp"
				android:text="@string/text_Description" android:textSize="18sp" />

			<EditText android:id="@+id/addExpenseDescription" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:ems="10"
				android:inputType="text" />

			<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="15dp"
				android:text="@string/text_Payment" android:textSize="18sp" />

			<Spinner android:id="@+id/addExpensePayment" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:entries="@array/entries_payment" />

			<TextView android:id="@+id/textView7" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="15dp"
				android:text="@string/text_date" android:textSize="18sp" />

			<EditText
			    android:id="@+id/addExpenseDate"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="@string/hint_date"
			    android:inputType="date" />

			<TextView
			    android:id="@+id/textView6"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:text="@string/text_comment"
			    android:textSize="18sp" />

			<EditText android:id="@+id/addExpenseComments" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:ems="10"
				android:inputType="text" />

			<Button android:id="@+id/button_save" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center"
				android:layout_marginBottom="20dp" android:layout_marginTop="15dp"
				android:text="@string/button_submit" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>